--- a/index.html
+++ b/index.html
@@ -149,13 +149,11 @@
         </section> 
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact"> 
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3303.440880509366!2d-118.33125148510558!3d34.10946118059029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bf16739eb349%3A0xa2daedd35dd900b1!2s6400%20Primrose%20Ave%2C%20Los%20Angeles%2C%20CA%2090068!5e0!3m2!1sen!2sus!4v1646113620540!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    width="400"
-                    height="400"
                     style="border:0;"
                     allowfullscreen=""
                     loading="lazy">
