--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html lang_"en">
     <head>
         <meta charset="UTF-8"/>
@@ -79,7 +79,7 @@
             <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
-                <!-- instert this img element -->
+                <!-- insert this img element -->
                 <img src="./assets/images/step-1.svg" alt="" />
                 <h3>Step 1: <span>Fill Out the Form Above</span></h3>
                 <p>You're already here, so why not?</p>
